--- a/tutorial/flaskr/templates/base.html
+++ b/tutorial/flaskr/templates/base.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %} - Flaskr</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 <nav>
     <h1>Flaskr</h1>
     <ul>
         {% if g.user %}
             <li><span>{{ g.user['username'] }}</span></li>
-            <li><a href='{{ url_for('auth.logout') }}>Log Out</a></li>
+            <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
         {% else %}
             <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-            <li><a href='{{ url_for('auth.logout) }}'>Log Out</a></li>
+            <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
         {% endif %}
     </ul>
 </nav>
